# alcor-ui

./: .babelrc.json  .dockerignore  .eslintignore  .eslintrc.js  .gitignore  .prettierrc  .sentryclirc.example  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.apiV2  Dockerfile.apiV2.bots  Dockerfile.apiV2.humans  Dockerfile.routecache-simple  PEOS DEX readme  README.md  config.js  deploy-api.bash  deploy.bash  ecosystem.config.js  ecosystem.config.js.orig  ecosystem.config.js_orig  global.d.ts  index.js  jsconfig.json  nginx.conf  nuxt.config.js  package-lock.json  package.json  test-pool-updates.js  test-route-cache-performance.js  test-wasm-routes.js  test-worker-init.js  tsconfig.json
api/: index.js
assets/: _variables.scss  base.scss  dark.css  element.scss  light.css  main.css  main.scss
components/: AccountAvatar.vue  AccountLink.vue  AlcorButton.vue  AlcorChart.vue  AlcorCollapse.vue  AlcorContainer.vue  AlcorFilters.vue  AlcorLink.vue  AlcorLoadMore.vue  AlcorLoading.vue  AlcorModal.vue  AlcorRadio.vue  AlcorSelect.vue  AlcorSwitch.vue  AlcorTab.vue  AlcorTabLink.vue  AlcorTabs.vue  AuthOnly.vue  BuyOfferFilters.vue  ChevronIcon.vue  CircleLoadingSvg.vue  CompactTabs.vue  CustomSkeleton.vue  HeightTransition.vue  History.vue  HistoryBuyOfferFilters.vue  HistoryGiftLinksFilter.vue  HistoryTradeOfferFilters.vue  HistoryTransferFilters.vue  LangOption.vue  MarketRow.vue  MarketTop.vue  NewOrderForm.vue  PairIcons.vue  PoolRow.vue  ProfileImage.vue  (+9 more)
server/rust-swap-router/: Cargo.toml  README.md
server/rust-swap-router/src/: main.rs  swap_math.rs  u256.rs
(+1135 files in other folders)
